feat: introduce stament with more concrete grammar

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ lalrpop = { version = "0.22.1" }
 
 [dependencies]
 lalrpop-util = { version = "0.22.1", features = ["lexer", "unicode"] }
+logos = "0.15.0"
