--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ lalrpop = { version = "0.22.1" }
 
 [dependencies]
 bitcoin = "0.32.5"
+clap = { version = "4.5.44", features = ["derive"] }
 lalrpop-util = { version = "0.22.1", features = ["lexer", "unicode"] }
 logos = "0.15.0"
